--- a/KISS_OSD/KISS_OSD.vcxproj.filters
+++ b/KISS_OSD/KISS_OSD.vcxproj.filters
@@ -17,9 +17,13 @@
   <ItemGroup>
     <None Include="KISS_OSD.ino" />
     <None Include="Functions_algo.ino" />
-    <None Include="Menue.ino" />
     <None Include="GlobalVar.h" />
     <None Include="EEPROM_Handling.ino" />
+    <None Include="MenueRight.ino" />
+    <None Include="Serial.ino" />
+    <None Include="FlightSummary.ino" />
+    <None Include="Display.ino" />
+    <None Include="MenuLeft.ino" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.KISS_OSD.vsarduino.h">
